syntax = "proto3";

package vixen.parser;

// accounts

message AmmConfigProto {
    uint32 bump = 1;
    uint32 index = 2;
    string owner = 3;
    uint32 protocol_fee_rate = 4;
    uint32 trade_fee_rate = 5;
    uint32 tick_spacing = 6;
    uint32 fund_fee_rate = 7;
    uint32 padding_u32 = 8;
    string fund_owner = 9;
    repeated uint64 padding = 10;
}

message OperationStateProto {
    uint32 bump = 1;
    repeated string operation_owners = 2;
    repeated string whitelist_mints = 3;
}

message ObservationProto {
    uint32 block_timestamp = 1;
    int64 tick_cumulative = 2;
    repeated uint64 padding = 3;
}


message ObservationStateProto {
    bool initialized = 1;
    uint64 recent_epoch = 2;
    uint32 observation_index = 3; 
    string pool_id = 4;
    repeated ObservationProto observations = 5;
    repeated uint64 padding = 6;
}

message RaydiumPositionRewardInfoProto {
    string growth_inside_last_x64 = 1;  
    uint64 reward_amount_owed = 2;
}


message PersonalPositionStateProto {
    uint32 bump = 1;  
    string nft_mint = 2;
    string pool_id = 3;
    int32 tick_lower_index = 4;
    int32 tick_upper_index = 5;
    string liquidity = 6;  
    string fee_growth_inside_0_last_x64 = 7;  
    string fee_growth_inside_1_last_x64 = 8;  
    uint64 token_fees_owed_0 = 9;
    uint64 token_fees_owed_1 = 10;
    repeated RaydiumPositionRewardInfoProto reward_infos = 11;
    uint64 recent_epoch = 12;
    repeated uint64 padding = 13;
}

message RewardInfoProto {
    uint32 reward_state = 1; 
    uint64 open_time = 2;
    uint64 end_time = 3;
    uint64 last_update_time = 4;
    string emissions_per_second_x64 = 5;  
    uint64 reward_total_emissioned = 6;
    uint64 reward_claimed = 7;
    string token_mint = 8;
    string token_vault = 9;
    string authority = 10;
    string reward_growth_global_x64 = 11;  
}

message PoolStateProto {
    uint32 bump = 1;
    string amm_config = 2;
    string owner = 3;
    string token_mint_0 = 4;
    string token_mint_1 = 5;
    string token_vault_0 = 6;
    string token_vault_1 = 7;
    string observation_key = 8;
    uint32 mint_decimals_0 = 9;
    uint32 mint_decimals_1 = 10;
    uint32 tick_spacing = 11;
    string liquidity = 12;
    string sqrt_price_x64 = 13;
    int32 tick_current = 14;
    uint32 padding3 = 15;
    uint32 padding4 = 16;
    string fee_growth_global_0_x64 = 17;
    string fee_growth_global_1_x64 = 18;
    uint64 protocol_fees_token_0 = 19;
    uint64 protocol_fees_token_1 = 20;
    string swap_in_amount_token_0 = 21;
    string swap_out_amount_token_1 = 22;
    string swap_in_amount_token_1 = 23;
    string swap_out_amount_token_0 = 24;
    uint32 status = 25;
    bytes padding = 26;
    repeated RewardInfoProto reward_infos = 27;
    repeated uint64 tick_array_bitmap = 28;
    uint64 total_fees_token_0 = 29;
    uint64 total_fees_claimed_token_0 = 30;
    uint64 total_fees_token_1 = 31;
    uint64 total_fees_claimed_token_1 = 32;
    uint64 fund_fees_token_0 = 33;
    uint64 fund_fees_token_1 = 34;
    uint64 open_time = 35;
    uint64 recent_epoch = 36;
    repeated uint64 padding1 = 37;
    repeated uint64 padding2 = 38;
}

message ProtocolPositionStateProto {
    uint32 bump = 1;  
    string pool_id = 2;
    int32 tick_lower_index = 3;
    int32 tick_upper_index = 4;
    string liquidity = 5; 
    string fee_growth_inside_0_last_x64 = 6;  
    string fee_growth_inside_1_last_x64 = 7;  
    uint64 token_fees_owed_0 = 8;
    uint64 token_fees_owed_1 = 9;
    repeated string reward_growth_inside = 10;  
    uint64 recent_epoch = 11;
    repeated uint64 padding = 12;
}

message RaydiumTickStateProto{
    int32 tick = 1;
    string liquidity_net = 2;  
    string liquidity_gross = 3;  
    string fee_growth_outside_0_x64 = 4;  
    string fee_growth_outside_1_x64 = 5;  
    repeated string reward_growths_outside_x64 = 6;  
    repeated uint32 padding = 7;
}

message RaydiumTickArrayStateProto {
    string pool_id = 1;
    int32 start_tick_index = 2;
    repeated RaydiumTickStateProto ticks = 3;
    uint32 initialized_tick_count = 4;  // Using uint32 instead of uint8 as Protobuf does not support uint8
    uint64 recent_epoch = 5;
    bytes padding = 6;
}


message TickArrayBitmapProto {
    repeated uint64 data = 1;
}

message TickArrayBitmapExtensionProto {
    string pool_id = 1;
    repeated TickArrayBitmapProto positive_tick_array_bitmap = 2;
    repeated TickArrayBitmapProto negative_tick_array_bitmap = 3;
}

// instructions

message RaydiumSwapAccountsProto {
    string payer = 1;
    string amm_config = 2;
    string pool_state = 3;
    string input_token_account = 4;
    string output_token_account = 5;
    string input_vault = 6;
    string output_vault = 7;
    string observation_state = 8;
    string token_program = 9;
    string tick_array = 10;
}

message RaydiumSwapV2AccountsProto {
    string payer = 1;
    string amm_config = 2;
    string pool_state = 3;
    string input_token_account = 4;
    string output_token_account = 5;
    string input_vault = 6;
    string output_vault = 7;
    string observation_state = 8;
    string token_program = 9;
    string token_2022_program = 10;
    string memo_program = 11;
    string input_vault_mint = 12;
    string output_vault_mint = 13;
    string tick_array = 14;
}

message RaydiumSwapIxDataProto {
    uint64 amount = 1;
    uint64 other_amount_threshold = 2;
    string sqrt_price_limit_x64 = 3;  
    bool is_base_input = 4;
}


message RaydiumSwapInstructionProto {
    RaydiumSwapAccountsProto accounts = 1;
    RaydiumSwapIxDataProto data = 2;
}

message RaydiumSwapV2InstructionProto {
    RaydiumSwapV2AccountsProto accounts = 1;
    RaydiumSwapIxDataProto data = 2;
}

