// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/raydium.proto


export interface OperationStateProto {
  'bump'?: (number);
  'operationOwners'?: (string)[];
  'whitelistMints'?: (string)[];
}

export interface OperationStateProto__Output {
  'bump': (number);
  'operationOwners': (string)[];
  'whitelistMints': (string)[];
}
