// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/raydium.proto


export interface RaydiumSwapAccountsProto {
  'payer'?: (string);
  'ammConfig'?: (string);
  'poolState'?: (string);
  'inputTokenAccount'?: (string);
  'outputTokenAccount'?: (string);
  'inputVault'?: (string);
  'outputVault'?: (string);
  'observationState'?: (string);
  'tokenProgram'?: (string);
  'tickArray'?: (string);
}

export interface RaydiumSwapAccountsProto__Output {
  'payer': (string);
  'ammConfig': (string);
  'poolState': (string);
  'inputTokenAccount': (string);
  'outputTokenAccount': (string);
  'inputVault': (string);
  'outputVault': (string);
  'observationState': (string);
  'tokenProgram': (string);
  'tickArray': (string);
}
