// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/raydium.proto


export interface RaydiumSwapV2AccountsProto {
  'payer'?: (string);
  'ammConfig'?: (string);
  'poolState'?: (string);
  'inputTokenAccount'?: (string);
  'outputTokenAccount'?: (string);
  'inputVault'?: (string);
  'outputVault'?: (string);
  'observationState'?: (string);
  'tokenProgram'?: (string);
  'token_2022Program'?: (string);
  'memoProgram'?: (string);
  'inputVaultMint'?: (string);
  'outputVaultMint'?: (string);
  'tickArray'?: (string);
}

export interface RaydiumSwapV2AccountsProto__Output {
  'payer': (string);
  'ammConfig': (string);
  'poolState': (string);
  'inputTokenAccount': (string);
  'outputTokenAccount': (string);
  'inputVault': (string);
  'outputVault': (string);
  'observationState': (string);
  'tokenProgram': (string);
  'token_2022Program': (string);
  'memoProgram': (string);
  'inputVaultMint': (string);
  'outputVaultMint': (string);
  'tickArray': (string);
}
